<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/searchViewHomePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goPremium"
                style="@style/categoryStyle"
                android:text="@string/premium_label" />

            <TextView
                android:id="@+id/playlist"
                style="@style/categoryStyle"
                android:text="@string/playlists_label" />

            <TextView
                style="@style/categoryStyle"
                android:background="@android:color/darker_gray"
                android:text="@string/library_label" />

            <TextView
                style="@style/categoryStyle"
                android:background="@android:color/darker_gray"
                android:text="@string/podcasts_label" />

            <TextView
                style="@style/categoryStyle"
                android:background="@android:color/darker_gray"
                android:text="@string/settings_label" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/playingNow"
        style="@style/playingNow"
        android:text="Playing Now" />

</LinearLayout>



